--- a/index.html
+++ b/index.html
@@ -7,29 +7,24 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
-        </ul>
-      </nav>
+      <img src="./images/Logo.png" alt="Logo" />
+      <ul>
+        <li>Studio</li>
+        <li>Portfolio</li>
+        <li>Contacts</li>
+      </ul>
       <address>
-        <ul>
-          <li><a href="maito:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <a href="maito:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button>Order Service</button>
       </section>
 
       <section>
-        <h2>ii</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -139,7 +134,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <img src="./images/Logo.png" alt="" />
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
