--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href=""></a>Portfolio</a></li>
+          <li><a href=""></a>Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="maito:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
