--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
-          <li><a href=""></a>Portfolio</a></li>
-          <li><a href=""></a>Contacts</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
